[gd_scene load_steps=6 format=3 uid="uid://clyynf7f5bwqv"]

[ext_resource type="Script" path="res://scenes/game/maps/lobby/skin_selector_point/skin_selector_point.gd" id="1_kee2m"]
[ext_resource type="Shader" path="res://assets/shaders/outline.gdshader" id="2_1htbf"]
[ext_resource type="Texture2D" uid="uid://ccpiiwi5tsiuw" path="res://assets/textures/lobby/objects/kamien.png" id="3_loxyp"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_eohvk"]
radius = 394.0
height = 1054.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xwbu7"]
shader = ExtResource("2_1htbf")
shader_parameter/line_color = Color(1, 1, 1, 0)
shader_parameter/line_thickness = 0.0

[node name="SkinSelectorPoint" type="Area2D"]
position = Vector2(-1, 0)
disable_mode = 2
collision_mask = 2
monitorable = false
priority = 1
script = ExtResource("1_kee2m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5, -287)
shape = SubResource("CapsuleShape2D_eohvk")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_xwbu7")
position = Vector2(0, 10)
scale = Vector2(1.122, 1.055)
texture = ExtResource("3_loxyp")
offset = Vector2(0, -350)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
